--- a/_posts/2016-10-22-小试gen_event.md
+++ b/_posts/2016-10-22-小试gen_event.md
@@ -1,6 +1,6 @@
 ---
 layout:  post
-title:    小试gen\_event
+title:    小试gen_event
 subtitle:   雄关漫道真如铁，而今迈步从头越
 author:  "半桶水"
 header-img: "img/post-bg-2016-3.jpg"
